# llm-sneak

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  HOSTS.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  docker-compose.yml  install.sh  pyproject.toml  setup.cfg  setup.py
llmsneak/: __init__.py  __main__.py  cli.py  constants.py  hosts.py  models.py  scanner.py
llmsneak/output/: formats.py  renderer.py
llmsneak/phases/: access.py  discovery.py  enumerate.py  fingerprint.py  guards.py  mcp_detect.py  ollama_inspect.py  port_scan.py  provider.py  vulns.py
llmsneak/probes/: loader.py
llmsneak/probes/packs/: anthropic.yaml  behavioral_claude.yaml  behavioral_gpt4.yaml  behavioral_knowledge.yaml  behavioral_math.yaml  behavioral_style.yaml  behavioral_tokenization.yaml  covert_identity.yaml  google.yaml  meta.yaml  openai.yaml  quirks.yaml
llmsneak/utils/: http.py  timing.py
tests/: test_cli.py  test_constants.py  test_models.py  test_phases.py  test_port_scan.py  test_probes.py  test_provider.py
