[metadata]
name             = llm-sneak
version          = 0.1.0
description      = LLM Security Scanner — Like Nmap, but for AI endpoints
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
author           = llm-sneak Contributors
python_requires  = >=3.10
url              = https://github.com/safellm/llm-sneak
classifiers      =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Topic :: Security
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Environment :: Console

[options]
packages         = find:
include_package_data = True
install_requires =
    httpx[http2]>=0.27.0
    rich>=13.7.0
    pyyaml>=6.0.0

[options.entry_points]
console_scripts =
    llm-sneak = llmsneak.cli:main

[options.package_data]
llmsneak.probes.packs = *.yaml

[options.extras_require]
dev =
    pytest>=8.0
    pytest-asyncio>=0.23
    black>=24.0
    ruff>=0.4.0
